# ksound

./: .gitignore  Cargo.toml  GitHub taophp_ksound LLM Context.html  README.md  justfile
src/: main.rs
src/config/: mod.rs
src/player/: mod.rs
src/ui/: mod.rs
