[package]
name = "ksound"
version = "0.1.2"
authors = ["Stéphane Mourey <mail@stephanemourey.fr>"]
edition = "2021"
description = "A minimalist command-line MP3 player written in Rust."
license = "AGPL-3.0"
repository = "https://github.com/taophp/ksound"
readme = "README.md"
keywords = ["mp3", "player", "terminal", "audio"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
dirs = "6.0.0"
id3 = "1.16.2"
rand = "0.9.0"
ratatui = "0.29.0"
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["mp3"] }
thiserror = "2.0.12"
toml = "0.8.20"
walkdir = "2.5.0"
